--- a/index.html
+++ b/index.html
@@ -3,69 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>เว็บง่าย ๆ ของฉัน</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f8ff;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #333;
-      overflow: hidden;
-    }
-    nav a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    nav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-    main {
-      padding: 20px;
-    }
-    footer {
-      background-color: #4CAF50;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
 </head>
 <body>
-
-  <header>
-    <h1>ยินดีต้อนรับสู่เว็บไซต์ของฉัน</h1>
-  </header>
-
-  <nav>
-    <a href="#">หน้าแรก</a>
-    <a href="#">เกี่ยวกับ</a>
-    <a href="#">ติดต่อ</a>
-  </nav>
-
-  <main>
-    <h2>เนื้อหาหลัก</h2>
-    <p>นี่คือเว็บไซต์ตัวอย่างที่สร้างด้วย HTML และ CSS แบบง่าย ๆ</p>
-  </main>
-
-  <footer>
-    &copy; 2025 สร้างโดย Wachirapong
-  </footer>
-
+<p>test</p>
 </body>
 </html>
