--- a/login.html
+++ b/login.html
@@ -2,33 +2,45 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>เข้าสู่ระบบ</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>เข้าสู่ระบบ | ระบบครุภัณฑ์</title>
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
-  <main class="login-box">
-    <h2>เข้าสู่ระบบ</h2>
+  <div class="login-container">
+    <h2>ระบบจัดการครุภัณฑ์</h2>
     <form id="loginForm">
-      <label>ชื่อผู้ใช้</label>
-      <input type="text" id="username" required>
-      <label>รหัสผ่าน</label>
-      <input type="password" id="password" required>
+      <label for="username">ชื่อผู้ใช้</label>
+      <input type="text" id="username" placeholder="กรอกชื่อผู้ใช้" required>
+
+      <label for="password">รหัสผ่าน</label>
+      <input type="password" id="password" placeholder="กรอกรหัสผ่าน" required>
+
       <button type="submit">เข้าสู่ระบบ</button>
+      <p id="error-message" class="error"></p>
     </form>
-  </main>
+
+    <p class="back-home">
+      <a href="index.html">← กลับหน้าแรก</a>
+    </p>
+  </div>
 
   <script>
-    document.getElementById("loginForm").addEventListener("submit", e => {
-      e.preventDefault();
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
+    const loginForm = document.getElementById("loginForm");
+    const errorMessage = document.getElementById("error-message");
 
-      if (user === "admin" && pass === "1234") {
+    loginForm.addEventListener("submit", function (e) {
+      e.preventDefault();
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      // ตัวอย่างระบบ Login แบบจำลอง
+      if (username === "admin" && password === "1234") {
         window.location.href = "admin.html";
-      } else if (user === "employee" && pass === "1234") {
+      } else if (username === "employee" && password === "1234") {
         window.location.href = "employee.html";
       } else {
-        alert("ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง");
+        errorMessage.textContent = "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
       }
     });
   </script>
