--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
   <script>
     // Google Sheet ของคุณ
     const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
-    const sheetName = "login"; // ชื่อแท็บใหม่ที่แก้แล้ว
+    const sheetName = "LOGIN"; // ชื่อแท็บใหม่ที่แก้แล้ว
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
 
     const loginForm = document.getElementById("loginForm");
