--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <script>
     const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
-    const sheetName = "LOG"; // แท็บครุภัณฑ์
+    const sheetName = "SHOW"; // แท็บครุภัณฑ์
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
 
     const tableBody = document.querySelector("#equipmentTable tbody");
