--- a/login.html
+++ b/login.html
@@ -26,57 +26,62 @@
   </div>
 
   <script>
-    // Google Sheet login
+    // --- ตั้งค่า Google Sheet ---
     const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
-    const sheetName = "LOGIN"; // แท็บ login
+    const sheetName = "LOGIN";
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
 
     const loginForm = document.getElementById("loginForm");
     const errorMessage = document.getElementById("error-message");
 
-    // ดึงข้อมูล login จาก Google Sheet
+    // --- ดึงข้อมูล login ---
     async function getLoginData() {
       try {
         const res = await fetch(baseURL);
         const text = await res.text();
+
         // แปลง JSON ของ Google Visualization API
         const json = JSON.parse(text.substring(47).slice(0,-2));
         const data = json.table.rows.map(r => ({
-          ID: r.c[1]?.v?.toString().trim(),       // ID
-          Pass: r.c[2]?.v?.toString().trim(),     // Pass
-          Status: r.c[3]?.v?.toString().trim()    // Status
+          ID: r.c[1]?.v?.toString().trim(),       // ตรวจสอบคอลัมน์ ID
+          Pass: r.c[2]?.v?.toString().trim(),     // ตรวจสอบคอลัมน์ Pass
+          Status: r.c[3]?.v?.toString().trim().toLowerCase() // ตรวจสอบคอลัมน์ Status
         }));
-        console.log("Login Data:", data); // ตรวจสอบใน console
+
+        console.log("Login Data จาก Google Sheet:", data);
         return data;
       } catch (err) {
         console.error("โหลดข้อมูล login ไม่สำเร็จ:", err);
+        errorMessage.textContent = "ไม่สามารถโหลดข้อมูลผู้ใช้ได้ กรุณาลองใหม่";
         return [];
       }
     }
 
-    // เช็ค login
+    // --- ตรวจสอบ login ---
     loginForm.addEventListener("submit", async function(e){
       e.preventDefault();
+      errorMessage.textContent = ""; // เคลียร์ข้อความเดิม
+
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
 
       const loginData = await getLoginData();
+      if(loginData.length === 0) return; // ถ้าโหลดไม่ได้
+
+      // หา user
       const user = loginData.find(u => u.ID === username && u.Pass === password);
+      console.log("ตรวจสอบผู้ใช้:", user);
 
       if(user){
-        // เก็บชื่อผู้ใช้ไว้ใน localStorage (optional)
+        // เก็บข้อมูล user
         localStorage.setItem("loginUser", JSON.stringify(user));
+
+        // แบ่งหน้าโดย Status
         if(user.Status === "admin"){
           window.location.href = "admin.html";
         } else if(user.Status === "employee"){
           window.location.href = "employee.html";
         } else {
           errorMessage.textContent = "สิทธิ์ผู้ใช้งานไม่ถูกต้อง";
+          console.warn("Status ไม่ถูกต้อง:", user.Status);
         }
-      } else {
-        errorMessage.textContent = "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
-      }
-    });
-  </script>
-</body>
-</html>
