--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
   </div>
 
   <script>
+    // --- ตั้งค่า Google Sheet ---
     const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
     const sheetName = "LOGIN";
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
@@ -33,11 +34,13 @@
     const loginForm = document.getElementById("loginForm");
     const errorMessage = document.getElementById("error-message");
 
-
+    // --- ดึงข้อมูล login ---
     async function getLoginData() {
       try {
         const res = await fetch(baseURL);
         const text = await res.text();
+
+        // แปลง JSON ของ Google Visualization API
         const json = JSON.parse(text.substring(47).slice(0,-2));
         const data = json.table.rows.map(r => ({
           ID: r.c[1]?.v?.toString().trim(),       // ตรวจสอบคอลัมน์ ID
@@ -54,6 +57,7 @@
       }
     }
 
+    // --- ตรวจสอบ login ---
     loginForm.addEventListener("submit", async function(e){
       e.preventDefault();
       errorMessage.textContent = ""; // เคลียร์ข้อความเดิม
@@ -81,3 +85,10 @@
           errorMessage.textContent = "สิทธิ์ผู้ใช้งานไม่ถูกต้อง";
           console.warn("Status ไม่ถูกต้อง:", user.Status);
         }
+      } else {
+        errorMessage.textContent = "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
+      }
+    });
+  </script>
+</body>
+</html>
