--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
 
   <script>
-    const sheetID = "ใส่ SHEET_ID ของคุณ"; // ใส่ Google Sheet ID
+    const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0"; // ใส่ Google Sheet ID
     const sheetName = "SHOW";
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}`;
 
