--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </main>
 
   <script>
-    const sheetID = "ใส่ SHEET_ID_ของคุณ";
+    const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
     const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json`;
 
     let allRows = [];
